# TurretC2C

./: .gitignore  README.md  cam.py  main.py  pyproject.toml  utils.py
cam_data/: web_cam.npz
config/: constants.yaml
models/: FramePacket.py  MotorStatus.py  MoveCommand.py  Target.py
subsystem/: ai.py  autoaim.py  bus.py  command.py  logger.py  motors.py  structure.py  vision.py
utility/: camera.py  interpolation.py  loader.py  paths.py
workers/: ultralytics.py
