[project]
name = "moteus-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "moteus>=0.3.98",
    "moteus-pi3hat>=0.3.33 ; sys_platform == 'linux'",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.92",
    "pypylon>=26.3.1",
    "pyyaml>=6.0.3",
    "ultralytics>=8.4.14",
]
